// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls snapshots default theme 1`] = `
Array [
  .c1 {
  width: 18px;
  $position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 svg {
  $position: absolute;
  -webkit-transition: right .25s ease-out;
  transition: right .25s ease-out;
  top: 50%;
  -webkit-transform: translateY(-47%);
  -ms-transform: translateY(-47%);
  transform: translateY(-47%);
}

.c1 svg:first-of-type {
  right: 0;
}

.c1 svg:last-of-type {
  right: 25px;
}

.c0 {
  cursor: pointer;
  background: #2CC700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #2CC700;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(90deg);
  -ms-transform: translate(-50%,-50%) rotate(90deg);
  transform: translate(-50%,-50%) rotate(90deg);
}

.c0 {
  cursor: pointer;
  background: #2CC700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #2CC700;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
  background: #2CC700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #2CC700;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
}

.c0.c0.c0 {
  height: 20px;
  width: 20px;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
]
`;

exports[`Controls snapshots second theme 1`] = `
Array [
  .c1 {
  width: 18px;
  $position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 svg {
  $position: absolute;
  -webkit-transition: right .25s ease-out;
  transition: right .25s ease-out;
  top: 50%;
  -webkit-transform: translateY(-47%);
  -ms-transform: translateY(-47%);
  transform: translateY(-47%);
}

.c1 svg:first-of-type {
  right: 0;
}

.c1 svg:last-of-type {
  right: 25px;
}

.c0 {
  cursor: pointer;
  background: #FF8135;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #FF8135;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(90deg);
  -ms-transform: translate(-50%,-50%) rotate(90deg);
  transform: translate(-50%,-50%) rotate(90deg);
}

.c0 {
  cursor: pointer;
  background: #FF8135;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #FF8135;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
  background: #FF8135;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #FF8135;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
}

.c0.c0.c0 {
  height: 20px;
  width: 20px;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
]
`;

exports[`Controls snapshots third theme 1`] = `
Array [
  .c1 {
  width: 18px;
  $position: relative;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 svg {
  $position: absolute;
  -webkit-transition: right .25s ease-out;
  transition: right .25s ease-out;
  top: 50%;
  -webkit-transform: translateY(-47%);
  -ms-transform: translateY(-47%);
  transform: translateY(-47%);
}

.c1 svg:first-of-type {
  right: 0;
}

.c1 svg:last-of-type {
  right: 25px;
}

.c0 {
  cursor: pointer;
  background: #009999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #009999;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
      <svg
        height="8px"
        version="1.1"
        viewBox="0 0 18 8"
        width="18px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          id="Symbols"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            id="m003---Footer_XL"
            transform="translate(-382.000000, -601.000000)"
          >
            <g
              id="Group-14"
              transform="translate(300.000000, 422.000000)"
            >
              <g
                id="Group-Copy-5"
                transform="translate(0.000000, 165.000000)"
              >
                <polygon
                  id="Fill-1"
                  points="90.1782098 8.97199207 90.1782098 23.7748389 88.2295517 21.8263225 87.0280079 23.0279371 91.0280079 27.0280079 95.0280079 23.0279371 93.8263225 21.8263225 91.8777353 23.7748389 91.8777353 8.97199207"
                  transform="translate(91.028008, 18.000000) rotate(-90.000000) translate(-91.028008, -18.000000) "
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(90deg);
  -ms-transform: translate(-50%,-50%) rotate(90deg);
  transform: translate(-50%,-50%) rotate(90deg);
}

.c0 {
  cursor: pointer;
  background: #009999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #009999;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  background: #FFFFFF;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
  background: #009999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #FFFFFF;
}

.c0.c0.c0 {
  height: 60px;
  width: 60px;
}

.c0 svg {
  width: 18px;
  height: 18px;
}

@media (max-width:991px) {
  .c0 {
    background: #009999;
  }

  .c0.c0.c0 {
    height: 45px;
    width: 45px;
  }
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
  .c1 {
  $position: relative;
  height: 100%;
  width: 100%;
}

.c2 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
}

.c3 {
  height: 2px;
  width: 25%;
  width: 80%;
  background: #000000;
  $position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%) rotate(45deg);
  -ms-transform: translate(-50%,-50%) rotate(45deg);
  transform: translate(-50%,-50%) rotate(45deg);
  -webkit-transition: width .25s ease-out;
  transition: width .25s ease-out;
  -webkit-transform: translate(-50%,-50%) rotate(-45deg);
  -ms-transform: translate(-50%,-50%) rotate(-45deg);
  transform: translate(-50%,-50%) rotate(-45deg);
}

.c0 {
  cursor: pointer;
}

.c0.c0.c0 {
  height: 20px;
  width: 20px;
}

<div
    className="c0"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
      />
    </div>
  </div>,
]
`;
